--- a/css/toDos.css
+++ b/css/toDos.css
@@ -36,7 +36,6 @@ main h1 {
 
 .mustToDoList,
 .canToDoList {
-    font-weight: 400;
     height: 27vh;
     margin-top: 7vh;
     overflow: auto;
@@ -51,6 +50,14 @@ main h1 {
     width: 80vw;
 }
 
+.toDoList__text {
+    border: none;
+    background-color: transparent;
+    font-size: 6vw;
+    width: 100%;
+    /* display: inline; */
+}
+
 .nonclick {
     visibility: hidden;
 }
@@ -58,7 +65,6 @@ main h1 {
 .toDoList .nonclick i {
     display: inline;
     vertical-align: middle;
-    font-size: 100%;
     margin-left: 3vw;
     color: var(--main-color);
     text-shadow: 1px 1px 1px var(--gray);
