--- a/css/footer.css
+++ b/css/footer.css
@@ -1,11 +1,8 @@
 footer {
     position: fixed;
-    bottom: 3vh;
+    bottom: 5vh;
     width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    background-color: darkorange;
 }
 
 .inputToDo {
@@ -73,15 +70,57 @@ footer {
 
 .buttons {
     display: flex;
+    align-items: center;
     justify-content: center;
 }
 
 .buttons i {
+    position: fixed;
+    display: flex;
+    justify-content: center;
     cursor: pointer;
     background-color: var(--main-color);
     margin-right: 2vw;
     font-size: 8vw;
     border-radius: 50%;
+    color: var(--white);
+    text-shadow: 1px 1px 2px var(--black);
+    padding: 2vw;
+}
+
+
+.buttons .history__btn {
+    position: relative;
+    left: 30%;
+    background-color: var(--deep-beige);
+    align-items: center;
+    padding: 3vw;
+    border-radius: 15%;
+    box-shadow: 2px 2px 2px var(--gray);
+    color: white;
+    font-size: 3vw;
+    font-weight: 600;
+    text-shadow: 1px 1px 2px var(--black);
+    cursor: pointer;
+}
+
+
+.history__list {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding: 2vw 5vw;
+}
+
+.history__list tr {
+    width: 100%;
+    height: 5vh;
+    background-color: antiquewhite;
+}
+
+.history__list tr td:first-child {
+    background-color: var(--main-color);
+    border-radius: 20%;
     color: var(--white);
     text-shadow: 1px 1px 2px var(--black);
     padding: 2vw;
