--- a/css/toDos.css
+++ b/css/toDos.css
@@ -13,7 +13,6 @@ main {
 }
 
 .canToDo {
-    /* height: 30vh; */
     display: flex;
     flex-direction: column;
     background-color: var(--beige);
@@ -39,6 +38,7 @@ main h1 {
     height: 27vh;
     margin-top: 7vh;
     overflow: auto;
+
 }
 
 /* 만들어진 애들 */
@@ -48,14 +48,6 @@ main h1 {
     justify-content: space-between;
     height: 8vh;
     width: 80vw;
-}
-
-.toDoList__text {
-    border: none;
-    background-color: transparent;
-    font-size: 6vw;
-    width: 100%;
-    /* display: inline; */
 }
 
 .nonclick {
@@ -70,6 +62,19 @@ main h1 {
     text-shadow: 1px 1px 1px var(--gray);
     visibility: visible;
     cursor: pointer;
+}
+
+.toDoList input {
+    border: none;
+    background-color: transparent;
+    font-size: 6vw;
+    width: 100%;
+}
+
+.toDoList input:active,
+.toDoList input:focus {
+    outline: none;
+    border-bottom: 1px solid var(--gray);
 }
 
 ::-webkit-scrollbar {
